--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-table": "^8.20.6",
     "@types/papaparse": "^5.3.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "lucide-react": "^0.294.0",
     "next": "^14.0.0",
