--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.4"
+    "use-debounce": "^10.0.4",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
