sms para confirmación de cita

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-table": "^8.20.6",
     "@types/papaparse": "^5.3.15",
+    "@types/twilio": "^3.19.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.6.0",
@@ -64,6 +65,7 @@
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.6.0",
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
