--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "crons": [
       {
         "path": "/api/reminders/process?dealership_id=534e6d39-7cea-4182-b9ad-15b0f4997484&reminder_type=follow_up",
-        "schedule": "0 14-22 * * *"
+        "schedule": "0 14 * * *"
       }
     ]
   }
