fix endpoint test

--- a/.github/workflows/cron-test.yml
+++ b/.github/workflows/cron-test.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - name: Call cron-test endpoint
         run: |
-          curl -v "https://edgarai.vercel.app/api/cron-test" 
+          curl -v "https://edgarai.vercel.app/api/cron-test/" 
