--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
         "schedule": "0 16 * * *"
       },
       {
-        "path": "/api/cron-test",
+        "path": "/api/cron-test/",
         "schedule": "0 20 * * *"
       }
     ]
