Fix curl to follow redirects and use correct URLs

--- a/.github/workflows/deactivate-agents.yml
+++ b/.github/workflows/deactivate-agents.yml
@@ -12,6 +12,6 @@ jobs:
     steps:
       - name: Call deactivate agents endpoint
         run: |
-          curl -v -X POST "https://edgarai.vercel.app/api/cron/deactivate-agents" \
+          curl -v -L -X POST "https://edgarai.vercel.app/api/cron/deactivate-agents/" \
             -H "Content-Type: application/json" \
             -d '{"dealership_id":"b8ecf479-16ed-4f38-a726-cc1617a1fcbf"}'
