--- a/.github/workflows/deactivate-agents.yml
+++ b/.github/workflows/deactivate-agents.yml
@@ -7,10 +7,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  call-deactivate-agents-endpoint:
+  call-deactivate-agents-endpoint-agency1:
     runs-on: ubuntu-latest
     steps:
-      - name: Call deactivate agents endpoint
+      - name: Call deactivate agents endpoint - Agencia 1
         uses: nick-fields/retry@v3
         with:
           timeout_minutes: 10
@@ -20,3 +20,18 @@ jobs:
             curl --fail -v -L -X POST "https://edgarai.vercel.app/api/cron/deactivate-agents/" \
               -H "Content-Type: application/json" \
               -d '{"dealership_id":"b8ecf479-16ed-4f38-a726-cc1617a1fcbf"}'
+
+  call-deactivate-agents-endpoint-agency2:
+    runs-on: ubuntu-latest
+    needs: call-deactivate-agents-endpoint-agency1
+    steps:
+      - name: Call deactivate agents endpoint - Agencia 2
+        uses: nick-fields/retry@v3
+        with:
+          timeout_minutes: 10
+          max_attempts: 3
+          retry_on: error
+          command: |
+            curl --fail -v -L -X POST "https://edgarai.vercel.app/api/cron/deactivate-agents/" \
+              -H "Content-Type: application/json" \
+              -d '{"dealership_id":"6fa78291-c16a-4c78-9fe2-9e3695d24d48"}'
