--- a/.github/workflows/deactivate-agents.yml
+++ b/.github/workflows/deactivate-agents.yml
@@ -35,3 +35,18 @@ jobs:
             curl --fail -v -L -X POST "https://edgarai.vercel.app/api/cron/deactivate-agents/" \
               -H "Content-Type: application/json" \
               -d '{"dealership_id":"6fa78291-c16a-4c78-9fe2-9e3695d24d48"}'
+
+  call-deactivate-agents-endpoint-agency3:
+    runs-on: ubuntu-latest
+    needs: call-deactivate-agents-endpoint-agency2
+    steps:
+      - name: Call deactivate agents endpoint - Agencia 3
+        uses: nick-fields/retry@v3
+        with:
+          timeout_minutes: 10
+          max_attempts: 3
+          retry_on: error
+          command: |
+            curl --fail -v -L -X POST "https://edgarai.vercel.app/api/cron/deactivate-agents/" \
+              -H "Content-Type: application/json" \
+              -d '{"dealership_id":"534e6d39-7cea-4182-b9ad-15b0f4997484"}'
