Mejorar lógica de cancelación de follow_up reminders
- Agregar nueva regla: cancelar follow_up de hoy si hay follow_up futuro pending
- Diferenciar razones de cancelación: client_has_future_appointment vs client_has_future_followup_reminder
- Cambiar horario del cron a 1:00 AM México (7:00 AM UTC)
- Mejorar logs para distinguir tipos de cancelación

--- a/.github/workflows/cancel-followup-reminders.yml
+++ b/.github/workflows/cancel-followup-reminders.yml
@@ -2,8 +2,8 @@ name: EdgarAI Cancelar Recordatorios de Seguimiento
 
 on:
   schedule:
-    # Cancelar recordatorios diariamente a las 6:00 AM UTC (medianoche en Ciudad de México)
-    - cron: '0 6 * * *'
+    # Cancelar recordatorios diariamente a las 1:00 AM México (7:00 AM UTC)
+    - cron: '0 7 * * *'
   workflow_dispatch:
 
 jobs:
