--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.4",
+    "sharp": "^0.34.4",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -81,6 +82,7 @@
     "@types/react": "^19.0.4",
     "@types/react-big-calendar": "^1.16.0",
     "@types/react-dom": "^19.0.2",
+    "@types/sharp": "^0.31.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.18.0",
     "eslint-plugin-react": "^7.37.4",
